templates/nodejs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nodejs
  name: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
      - image: harsha975335/nodejs:basic
        name: nodejs
        volumeMounts:
        - name: tls-secret
          mountPath: "/tmp/"
        resources:
          requests:
            cpu: "250m"
      volumes:
      - name: tls-secret
        secret:
          secretName: nodejs-tls
